[tool.poetry]
name = "pulumi-eks-allowlist-update"
version = "0.1.0"
description = "Updating EKS endpoint allowlist produce wrong preview"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pulumi = "^3.171.0"
python = "~3.12"
pulumi-aws-native = "^1.28.0"
pulumi-aws = "~6.67.0"
pulumi-kubernetes = "~4.21.1"
pulumi-awsx = "^2.21.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
